--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "devtron": "^1.4.0",
     "electron": "^9.4.4",
     "electron-debug": "^3.2.0",
-    "electron-devtools-installer": "^3.2.0"
+    "electron-devtools-installer": "^3.2.0",
+    "electron-packager": "^14.2.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
