--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -13,6 +13,7 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
+    "cordova-android": "^9.1.0",
     "cordova-ios": "^6.2.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-whitelist": "^1.3.4"
@@ -24,7 +25,8 @@
       "cordova-plugin-splashscreen": {}
     },
     "platforms": [
-      "ios"
+      "ios",
+      "android"
     ]
   },
   "dependencies": {
